--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,11 +3,11 @@
     android:id="@+id/item_root"
     android:layout_marginTop="10dp"
     android:layout_width="match_parent"
-    android:background="#ff00ff"
     android:layout_height="40dp"
     android:orientation="vertical">
 
     <TextView
+        android:layout_gravity="center"
         android:id="@+id/item_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
